--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,34 +33,20 @@
         android:orientation="horizontal"
         android:layout_height="0dp"
         android:layout_width="fill_parent"
+        android:paddingBottom="20dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="20dp"
         android:background="@drawable/black_square"
-        android:layout_weight="0.175">
+        android:layout_weight="0.25">
 
         <TextView
-            android:id="@+id/score"
+            android:id="@+id/output"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="16sp"
             android:textColor="@android:color/white" />
 
     </FrameLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.075"
-        android:background="@drawable/black_square">
-
-        <Button
-            android:id="@+id/restart"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="16sp"
-            android:text="Restart"
-            android:textColor="@android:color/black"
-            android:onClick="restart" />
-
-    </RelativeLayout>
 
 </LinearLayout>
